# simple_searcher

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docs.json  pyproject.toml
app/: main.py  models.py  services.py  settings.py
